[gd_scene load_steps=6 format=2]

[ext_resource path="res://GFX/Objects/landslide.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/Press_E.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Landslide.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 78.0881, 32.5878 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 109.48, 76.1367 )

[node name="Landslide" type="Area2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Press_E" parent="." instance=ExtResource( 2 )]
position = Vector2( 7.55099, -79.7574 )
frame = 1
[connection signal="body_entered" from="." to="." method="_on_Landslide_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Landslide_body_exited"]
